--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 <body>
   <!-- Menu principal -->
   <nav>
-    <img src="LOGOCECY.PNG" alt="Logo" class="logo">
+    <img src="LOGOCECY.png" alt="Logo" class="logo">
     <form method="get" action="https://www.google.com/search" target="_blank">
         <input type="search" name="q" placeholder="introducir busqueda" autofocus required>
         <input type="submit">
     </form>
 <ul>
-      <li><p><a href="ciudadano2.html">CIUDADANO</a></p></li>
+      <li><p><a href="Ciudadano2.html">CIUDADANO</a></p></li>
       <li> 
         <p><a href="#">INFORMACION</a></p>
         <ul>
