--- a/GALERIAMP4.html
+++ b/GALERIAMP4.html
@@ -89,7 +89,7 @@
 
     <div class="video-card">
       <video controls>
-        <source src="REMPLACAMIENTO.MP4" type="video/mp4">
+        <source src="REMPLACAMIENTO.mp4" type="video/mp4">
         Tu navegador no soporta video.
       </video>
       <div class="video-title">¿Como remplacar mi auto?</div>
@@ -97,7 +97,7 @@
 
     <div class="video-card">
       <video controls>
-        <source src="VISA.MP4" type="video/mp4">
+        <source src="VISA.mp4" type="video/mp4">
         Tu navegador no soporta video.
       </video>
       <div class="video-title">¿Como solicitar la visa?</div>
@@ -105,7 +105,7 @@
 
     <div class="video-card">
       <video controls>
-        <source src="ANTECEDENTES2.MP4" type="video/mp4">
+        <source src="ANTECEDENTES2.mp4" type="video/mp4">
         Tu navegador no soporta video.
       </video>
       <div class="video-title">¿Como tramitar antecedentes no penales?</div>
