--- a/gestionartramite.html
+++ b/gestionartramite.html
@@ -182,12 +182,12 @@
 </center>
  <!-- Galería tipo collage grande -->
  <section class="galeria">
-   <img src="AN2.PNG" alt="ACTA DE NACIMIENTO">
-   <img src="CURP2.PNG" alt="CURP">
-   <img src="LICENCIA2.PNG" alt="LICENCIA">
-   <img src="SAT2.PNG" alt="SAT">
-   <img src="RC.PNG" alt="REGISTROCIVIL">
-   <img src="PASAPORTE2.PNG" alt="Imagen 6">
+   <img src="AN2.png" alt="ACTA DE NACIMIENTO">
+   <img src="CURP2.png" alt="CURP">
+   <img src="LICENCIA2.png" alt="LICENCIA">
+   <img src="SAT2.png" alt="SAT">
+   <img src="RC.png" alt="REGISTROCIVIL">
+   <img src="PASAPORTE2.png" alt="Imagen 6">
  </section>
 
 </body>
