--- a/tramites.html
+++ b/tramites.html
@@ -122,50 +122,50 @@
     </div>
 
     <div class="galeria_item">
-        <a href="INE.PNG" data-lightbox="models" data-title="imagen3">
-        <img src="INE.PNG" alt="">
+        <a href="INE.png" data-lightbox="models" data-title="imagen3">
+        <img src="INE.png" alt="">
     </a>
     </div>
 
     <div class="galeria_item">
-        <a href="PASAPORTE.PNG" data-lightbox="models" data-title="imagen4">
-        <img src="PASAPORTE.PNG" alt="">
+        <a href="PASAPORTE.png" data-lightbox="models" data-title="imagen4">
+        <img src="PASAPORTE.png" alt="">
     </a>
     </div>
 
     <div class="galeria_item">
-        <a href="REGISTROCIVIL.PNG" data-lightbox="models" data-title="imagen5">
-        <img src="REGISTROCIVIL.PNG" alt="">
+        <a href="REGISTROCIVIL.png" data-lightbox="models" data-title="imagen5">
+        <img src="REGISTROCIVIL.png" alt="">
     </a>
     </div>
 
     <div class="galeria_item">
-        <a href="LICENCIA.PNG" data-lightbox="models" data-title="imagen6">
-        <img src="LICENCIA.PNG" alt="">
+        <a href="LICENCIA.png" data-lightbox="models" data-title="imagen6">
+        <img src="LICENCIA.png" alt="">
     </a>
     </div>
 
     <div class="galeria_item">
-        <a href="SAT.PNG" data-lightbox="models" data-title="imagen7">
-        <img src="SAT.PNG" alt="">
+        <a href="SAT.png" data-lightbox="models" data-title="imagen7">
+        <img src="SAT.png" alt="">
     </a>
     </div>
 
     <div class="galeria_item">
-        <a href="CONSTANCIA.PNG" data-lightbox="models" data-title="imagen8">
-        <img src="CONSTANCIA.PNG" alt="">
+        <a href="CONSTANCIA.png" data-lightbox="models" data-title="imagen8">
+        <img src="CONSTANCIA.png" alt="">
     </a>
     </div>
 
     <div class="galeria_item">
-        <a href="SEGURO.PNG" data-lightbox="models" data-title="imagen9">
-        <img src="SEGURO.PNG" alt="">
+        <a href="SEGURO.png" data-lightbox="models" data-title="imagen9">
+        <img src="SEGURO.png" alt="">
     </a>
     </div>
 
     <div class="galeria_item">
-        <a href="CURP.PNG" data-lightbox="models" data-title="imagen10">
-        <img src="CURP.PNG" alt="">
+        <a href="CURP.png" data-lightbox="models" data-title="imagen10">
+        <img src="CURP.png" alt="">
     </a>
     </div>
 </main>
