--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
       <!-- 🔹 Botón de DUDAS más pequeño y centrado -->
       <li>
-        <a href="index3.html" class="dudas-link">
+        <a href="índex3.html" class="dudas-link">
           <img src="DUDA.png" alt="Dudas" class="icono-dudas">
           <span class="texto-dudas">DUDAS</span>
         </a>
