--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head> 
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Menú con Submenú</title>
  <!-- Fuente Raleway -->
  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -25,6 +26,24 @@
       align-items: center;
       z-index: 10;
    }
+
+@media (max-width: 600px) {
+  body {
+    padding: 10px;
+  }
+  main {
+    padding: 10px;
+  }
+  h1, h2 {
+    font-size: 1.2em;
+    text-align: center;
+  }
+  iframe {
+    width: 100%;
+    height: 200px;
+  }
+}
+
 
    /* Imagen del logo */
    nav img.logo {
