--- a/Ciudadano2.html
+++ b/Ciudadano2.html
@@ -94,7 +94,7 @@
   <h2>Galería de imágenes</h2>
   <img src="CYY.jpg" alt="Ciudadano ayudando a la comunidad">
   <img src="PV.jpg" alt="Personas votando">
-  <img src="PC.WEBP" alt="Participación ciudadana">
+  <img src="PC.webp" alt="Participación ciudadana">
   <img src="CC.jpeg" alt="Ciudadanos">
 
   <h2>Reflexión final</h2>
