--- a/INFO.html
+++ b/INFO.html
@@ -120,32 +120,32 @@
         <!-- OXXO Av del Carmen 14 -->
         <div class="gallery-item">
           <a href="https://www.google.com/maps/place/Oxxo/@19.1624941,-100.1220337,17z/data=!3m1!5s0x85cd64f6789c51b1:0xb8a003c36929d20!4m15!1m8!3m7!1s0x85cd64f678a0e8db:0x5b9b7397c3ba241d!2sDel+Carmen+14,+Avandaro,+51200+Valle+de+Bravo,+M%C3%A9x.!3b1!8m2!3d19.1632846!4d-100.1231388!16s%2Fg%2F11q2nlchx3!3m5!1s0x85cd64f5d5c8de53:0x1c0525bb2665cfaf!8m2!3d19.16302!4d-100.12279!16s%2Fg%2F11b6mk_f0t?entry=ttu&g_ep=EgoyMDI1MTEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">OXXO Av del Carmen 14</a>
-          <img src="OAV.PNG" alt="OXXO Av del Carmen 14">
+          <img src="OAV.png" alt="OXXO Av del Carmen 14">
         </div>
         <!-- OXXO Calle Francisco González Bocanegra 316‑C -->
         <div class="gallery-item">
           <a href="https://www.google.com/maps/search/?api=1&query=Calle+Francisco+Gonzalez+Bocanegra+316C+Valle+de+Bravo" target="_blank">OXXO Calle Francisco González Bocanegra 316‑C</a>
-          <img src="OBOCA.PNG" alt="OXXO Calle Francisco González Bocanegra">
+          <img src="OBOCA.png" alt="OXXO Calle Francisco González Bocanegra">
         </div>
         <!-- Soriana Súper Valle de Bravo -->
         <div class="gallery-item">
           <a href="https://www.google.com/maps/place/Soriana+S%C3%BAper+-+Valle+de+Bravo/@19.203566,-100.1329437,3a,75y,90t/data=!3m8!1e2!3m6!1sAF1QipNqtmh73qbopFOC2oxhGoZ2gCgwb4fsqSKlF4Tc!2e10!3e12!6shttps:%2F%2Flh3.googleusercontent.com%2Fp%2FAF1QipNqtmh73qbopFOC2oxhGoZ2gCgwb4fsqSKlF4Tc%3Dw203-h270-k-no!7i3000!8i4000!4m7!3m6!1s0x85cd6384d373e321:0xacbbeac496b2c674!8m2!3d19.2034999!4d-100.1331469!10e5!16s%2Fg%2F11b6j5p5_7?entry=ttu&g_ep=EgoyMDI1MTEwMi4wIKXMDSoASAFQAw%3D%3D" target="_blank">Soriana Súper Valle de Bravo</a>
-          <img src="SVB.PNG" alt="Soriana Valle de Bravo">
+          <img src="SVB.png" alt="Soriana Valle de Bravo">
         </div>
         <!-- Chedraui Valle de Bravo -->
         <div class="gallery-item">
           <a href="https://www.google.com/maps/search/?api=1&query=Blvd+Juan+Herrera+y+Pi%C3%B1a+%237+Valle+de+Bravo" target="_blank">Chedraui Valle de Bravo</a>
-          <img src="CVB.PNG" alt="Chedraui Valle de Bravo">
+          <img src="CVB.png" alt="Chedraui Valle de Bravo">
         </div>
         <!-- BBVA Sucursal 5 de Febrero 107 -->
         <div class="gallery-item">
           <a href="https://www.google.com/maps/search/?api=1&query=5+de+Febrero+107+Valle+de+Bravo" target="_blank">BBVA Sucursal 5 de Febrero 107</a>
-          <img src="BVB.PNG" alt="BBVA Valle de Bravo">
+          <img src="BVB.png" alt="BBVA Valle de Bravo">
         </div>
          <!-- Banamex Valle de Bravo -->
        <div class="gallery-item">
       <a href="https://www.google.com/maps/search/?api=1&query=Banamex+Valle+de+Bravo" target="_blank">Banamex Valle de Bravo</a>
-      <img src="BANAMEX.PNG" alt="Banamex Valle de Bravo">
+      <img src="BANAMEX.png" alt="Banamex Valle de Bravo">
       </div>
       
     </section>
