--- a/index2.html
+++ b/index2.html
@@ -1,29 +1,58 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GUIA CIUDADANA VISITANTES</title>
-    <!-- Enlazamos solo el CSS del formulario -->
+
+    <!-- CSS del formulario -->
     <link rel="stylesheet" type="text/css" href="estilos_formulario.css">
+
+    <style>
+        /* --- Ajuste responsive sin cambiar tu diseño --- */
+        .form-wrapper {
+            width: 100%;
+            max-width: 450px;        /* límite para que no se haga enorme */
+            margin: 0 auto;          /* centrado */
+            padding: 15px;
+            box-sizing: border-box;
+        }
+
+        /* Para que los inputs nunca se salgan en celular */
+        #form-visitante input {
+            width: 100% !important;
+            box-sizing: border-box;
+        }
+
+        /* Título responsivo */
+        .titulo {
+            text-align: center;
+            padding: 10px;
+            margin: 0;
+        }
+    </style>
 </head>
+
 <body>
 
     <h1 class="titulo">GUIA CIUDADANA VISITANTES</h1>
 
-    <!-- Le ponemos un ID para que el CSS lo aplique específicamente -->
-    <form id="form-visitante" method="post" action="registrar2.php">
-        <h2>REGISTRAR VISITA</h2>
-        
-        <input type="text" name="NOMBRE" placeholder="Nombre" required>
-        <input type="text" name="A_PATERNO" placeholder="Apellido Paterno" required>
-        <input type="text" name="A_MATERNO" placeholder="Apellido Materno" required>
-        <input type="text" name="LOCALIDADCOMUNIDAD" placeholder="Localidad / Comunidad" required>
-        <input type="text" name="MUNICIPIO" placeholder="Municipio" required>
-        
-        <input type="submit" name="registrar" value="Registrar">
-    </form>
+    <!-- WRAPPER QUE ARREGLA TODO -->
+    <div class="form-wrapper">
+
+        <form id="form-visitante" method="post" action="registrar2.php">
+            <h2>REGISTRAR VISITA</h2>
+
+            <input type="text" name="NOMBRE" placeholder="Nombre" required>
+            <input type="text" name="A_PATERNO" placeholder="Apellido Paterno" required>
+            <input type="text" name="A_MATERNO" placeholder="Apellido Materno" required>
+            <input type="text" name="LOCALIDADCOMUNIDAD" placeholder="Localidad / Comunidad" required>
+            <input type="text" name="MUNICIPIO" placeholder="Municipio" required>
+
+            <input type="submit" name="registrar" value="Registrar">
+        </form>
+
+    </div>
 
 </body>
 </html>
-
